Fri Oct 27 13:03:28 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * config.h (ALLOCA_IN_STDLIB): new #define.

        * pwd.h, pwd.c: new files (for now, copied from ../windows-NT
        directory.  We'll modify/merge them as necessary.)

        * config.h: don't use __stdcall in declaration of gethostname().

        * Makefile.in (DISTFILES): include config.h and options.h.

Wed Oct 25 12:52:54 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * config.h: new file; will maintain by hand.
        Made first pass through to cast it into OS/2-ish condition.
        
        * Makefile.in: started adding lots of OS/2 gunk.
        Took out autoconf stuff; just don't want to fool around with that
        until after it compiles on beezley.
        (cvs.exe): moved this rule to bottom.

Tue Oct 24 13:51:05 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* Makefile.in: add autoconf variables

	* Makefile.in (dist): use $(srcdir)

Mon Oct 23 17:37:36 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * Makefile.in (clean): new rule.

        * init os2 directory.  Made dummy Makefile.in, README.